[package]
name = "preproc"
version = "0.1.5"
edition = "2021"
description = "a sane pre-processor for shaders and any other language"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/preproc"
repository = "https://github.com/lassade/preproc"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]

[dependencies]
hashbrown = "0.13.2"
beef = "0.5.2"
smallvec = "1.10.0"
smartstring = { version = "1.0.1", default-features = false }
simdutf8 = "0.1.4"
#codespan-reporting = "0.11.1"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false, features = ["rayon", "cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false